--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.0</version>
 		</dependency>
+		
+		<dependency>
+		 <groupId>org.apache.tomcat</groupId>
+		 <artifactId>tomcat-dbcp</artifactId>
+		 <version>8.0.33</version>
+		</dependency>
 	
   </dependencies>
 
